Correcting the menu.

--- a/app/views/_layout.phtml
+++ b/app/views/_layout.phtml
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title><?php echo A('title', 'My website') ?></title>
+        <title><?php echo A('title', 'Fightly - Web Game Engine') ?></title>
 
         <?php foreach (A('styles', array()) as $style): ?>
         <link rel="stylesheet" type="text/css" href="<?php echo Atomik::appAsset($style) ?>" />
@@ -36,7 +36,9 @@
             </div>
 
             <footer>
-                <p>2011 - By <a href="http://adrian.gaudebert.fr">Adrian Gaudebert</a> and <a href="http://fightly-dev.lqbs.fr/forum/index.php?p=userlist&g_id=7">fellas</a> - <a href="http://sourceforge.net/p/web-game-engine/git/">Browse sources on SourceForge</a></p>
+                2011 -
+                By <a href="http://fightly-dev.lqbs.fr/forum/index.php?p=userlist&g_id=7">The Fightly Dev Team</a> -
+                <a href="https://github.com/AdrianGaudebert/fightly-game-engine">Browse sources on GitHub</a></p>
             </footer>
         </div> <!-- end of #container -->
 
